--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#修改端口号
+server.port=9080
+
+#数据库连接信息
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mall_pms?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
@@ -7,4 +11,7 @@ spring.datasource.password=123456
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 # 日志的显示级别
-logging.level.cn.tedu.csmall=debug
+logging.level.cn.tedu.csmall=trace
+
+# Jackson框架相关配置JSON结果中是否包含为null的属性的默认配置
+spring.jackson.default-property-inclusion=non_null
