--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ logging.level.cn.tedu.csmall=trace
 
 # Jackson框架相关配置JSON结果中是否包含为null的属性的默认配置
 spring.jackson.default-property-inclusion=non_null
+
+# 开启Knife4j的增强模式
+knife4j.enable=true
