--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jackson.default-property-inclusion=non_null
 
 # 开启Knife4j的增强模式
 knife4j.enable=true
+
+# 自定义配置
+csmall.jwt.secret-key=kns439a}fdLK34jsmfd{MF5-8DJSsLKhJNFDSjn
